# test_buyhouse

./: CLAUDE.md  README.md  debug_csv.py  hist0.txt  hist1.txt  main.py  pyproject.toml  requirements.txt  update_data.py  update_data_fixed.py  update_scale.py  wsgi.py
app/: __init__.py  views.py
app/dash_apps/: Payment.py  buyorrent.py  city.py  plt_income.py  plt_trend.py  readata.py
app/static/assets/: city_p.csv  city_r.csv  date_data.csv  price.csv  rent.csv  scale.csv
app/static/assets/data/106Q1/: x_lvr_land_c.csv
app/static/assets/data/110Q1/: x_lvr_land_c.csv
app/static/assets/data/110Q3/: a_lvr_land_c.csv  x_lvr_land_c.csv
app/static/assets/data/110Q4/: w_lvr_land_c.csv
app/static/assets/data/111Q2/: w_lvr_land_c.csv
app/static/assets/data/111Q3/: a_lvr_land_a.csv  a_lvr_land_c.csv  b_lvr_land_a.csv  b_lvr_land_c.csv  build.ttt  c_lvr_land_a.csv  c_lvr_land_c.csv  d_lvr_land_a.csv  d_lvr_land_c.csv  e_lvr_land_a.csv  e_lvr_land_c.csv  f_lvr_land_a.csv  f_lvr_land_c.csv  g_lvr_land_a.csv  g_lvr_land_c.csv  h_lvr_land_a.csv  h_lvr_land_c.csv  i_lvr_land_a.csv  i_lvr_land_c.csv  j_lvr_land_a.csv  j_lvr_land_c.csv  k_lvr_land_a.csv  k_lvr_land_c.csv  m_lvr_land_a.csv  m_lvr_land_c.csv  manifest.csv  n_lvr_land_a.csv  n_lvr_land_c.csv  o_lvr_land_a.csv  o_lvr_land_c.csv  p_lvr_land_a.csv  p_lvr_land_c.csv  q_lvr_land_a.csv  q_lvr_land_c.csv  t_lvr_land_a.csv  t_lvr_land_c.csv  u_lvr_land_a.csv  u_lvr_land_c.csv  v_lvr_land_a.csv  v_lvr_land_c.csv  (+4 more)
app/static/assets/data/112Q3/: a_lvr_land_a.csv  a_lvr_land_a_build.csv  a_lvr_land_a_land.csv  a_lvr_land_a_park.csv  a_lvr_land_b.csv  a_lvr_land_b_land.csv  a_lvr_land_b_park.csv  a_lvr_land_c_build.csv  a_lvr_land_c_land.csv  a_lvr_land_c_park.csv  b_lvr_land_b.csv  b_lvr_land_b_land.csv  b_lvr_land_b_park.csv  b_lvr_land_c.csv  b_lvr_land_c_build.csv  b_lvr_land_c_land.csv  b_lvr_land_c_park.csv  c_lvr_land_a.csv  c_lvr_land_a_build.csv  c_lvr_land_a_land.csv  c_lvr_land_a_park.csv  c_lvr_land_b.csv  c_lvr_land_b_land.csv  c_lvr_land_b_park.csv  c_lvr_land_c.csv  c_lvr_land_c_build.csv  c_lvr_land_c_land.csv  c_lvr_land_c_park.csv  d_lvr_land_a.csv  d_lvr_land_a_build.csv  d_lvr_land_a_land.csv  d_lvr_land_a_park.csv  d_lvr_land_b.csv  d_lvr_land_b_land.csv  d_lvr_land_b_park.csv  d_lvr_land_c.csv  d_lvr_land_c_build.csv  d_lvr_land_c_land.csv  (+181 more)
app/static/css/: map.css  sb-admin-2.css  styles.css
app/static/js/: map.js  map2.js  scripts.js
app/templates/: buyhouse.html  index.html
(+1558 files in other folders)
