[project]
name = "buyhouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs==22.1.0",
    "autopep8==1.7.0",
    "brotli==1.0.9",
    "click==8.1.3",
    "colorama==0.4.5",
    "cycler==0.11.0",
    "cython==0.29.32",
    "dash==2.6.1",
    "dash-core-components==2.0.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "deprecated==1.2.13",
    "distlib==0.3.5",
    "fastjsonschema==2.16.1",
    "filelock==3.8.0",
    "flask==2.2.2",
    "flask-compress==1.12",
    "fonttools==4.37.0",
    "holdem-calc==1.0.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "jsonschema==4.14.0",
    "kiwisolver==1.4.4",
    "markupsafe==2.1.1",
    "matplotlib==3.5.3",
    "mpi4py==3.1.3",
    "mymodule==1.0.0",
    "mysql-connector-python==8.0.30",
    "numpy==1.23.2",
    "numpy-financial==1.0.0",
    "opencv-python==4.6.0.66",
    "packaging==21.3",
    "pandas==1.4.3",
    "pillow==9.2.0",
    "platformdirs==2.5.2",
    "plotly==5.10.0",
    "pokereval==0.2.0",
    "prettytable==3.4.1",
    "pycodestyle==2.9.1",
    "pyecharts==1.9.1",
    "pyparsing==3.0.9",
    "pypokerengine==1.0.1",
    "pyrsistent==0.18.1",
    "python-dateutil==2.8.2",
    "pytz==2022.2.1",
    "pywebio==1.6.3",
    "scipy==1.9.0",
    "seaborn==0.11.2",
    "simplejson==3.17.6",
    "six==1.16.0",
    "tenacity==8.0.1",
    "texasholdem==0.7.2",
    "toml==0.10.2",
    "tornado==6.2",
    "traitlets==5.3.0",
    "ua-parser==0.16.1",
    "user-agents==2.2.0",
    "virtualenv==20.16.3",
    "wcwidth==0.2.5",
    "werkzeug==2.2.2",
    "windows-curses==2.3.0",
    "wrapt==1.14.1",
    "xarray==2022.6.0",
]
