[project]
name = "buyhouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.1.3",
    "colorama==0.4.5",
    "cycler==0.11.0",
    "flask==2.2.2",
    "flask-compress==1.12",
    "fonttools==4.37.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "kiwisolver==1.4.4",
    "markupsafe==2.1.1",
    "numpy==1.23.2",
    "numpy-financial==1.0.0",
    "packaging==21.3",
    "pandas==1.4.3",
    "pillow==9.2.0",
    "plotly==5.10.0",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "pytz==2022.2.1",
    "six==1.16.0",
    "tenacity==8.0.1",
    "werkzeug==2.2.2",
]
